Fix alignment for seti-icons

--- a/styles.less
+++ b/styles.less
@@ -58,7 +58,7 @@ atom-text-editor::shadow .gutter {
     height: 16px;
     opacity: 1;
     position: relative;
-    top: 1px;
+    top: 4px;
   }
 
   .header:before {
